--- a/my-first-react/src/App.css
+++ b/my-first-react/src/App.css
@@ -32,7 +32,27 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.container {
+  color: white;
+  background-color: aqua;
+  padding: 0px 80px;
+  border-radius: 10px;
+}
+
+.music {}
+
+.persons {
+  background-color: coral;
+  color: black;
+  padding: 0px 60px;
+  border-radius: 10px;
+  border: 2px solid red;
+  margin: 10px;
+  font-size: 16px;
 }
