--- a/my-first-react/src/App.css
+++ b/my-first-react/src/App.css
@@ -63,3 +63,12 @@
   font-weight: 400;
   font-size: 16px;
 }
+
+.singleCountry {
+  border-radius: 20px;
+  border: 5px solid white;
+  padding: 20px 60px;
+  background-color: aquamarine;
+  color: black;
+  margin: 10px;
+}
