--- a/my-first-react/src/components/Country/Country.css
+++ b/my-first-react/src/components/Country/Country.css
@@ -2,6 +2,7 @@
    background-color: antiquewhite;
    /* border: 4px solid black; */
    border-radius: 10px;
+   color: black;
 }
 
 .showCountries img {
