--- a/ph-projects/ema-john/src/App.css
+++ b/ph-projects/ema-john/src/App.css
@@ -32,7 +32,15 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+button {
+  padding: 4px 8px;
+  margin: 0px 10px;
+  font-size: 16px;
+  font-weight: 500;
 }
